# PantryPalML

./: .gitignore  .pre-commit-config.yaml  INFERENCE_GUIDE.md  Makefile  README.md  analyze_recipe_duplicates.py  pyproject.toml  run_inference_example.py
notebooks/: A2_Colab_Demo.ipynb  A2_Production_EndToEnd.ipynb  A2_Production_Inference.ipynb  A2_Production_Training.ipynb  README.md
recipe_recommender/: README.md  __init__.py  config.py  feature_catalog.csv
recipe_recommender/analysis/: exploratory_data_analysis.py  feature_engineering.py
recipe_recommender/etl/: fetch_user_interactions.py
recipe_recommender/etl/database/: README.md  __init__.py  fetch_real_recipes.py  supabase_config.py
recipe_recommender/etl/events/: __init__.py  event_transformation.py  helpers.py
recipe_recommender/inference/: production_recipe_scorer.py  recipe_scorer.py
recipe_recommender/models/: hybrid_gbm_recommender.py  hybrid_recommendation_data_builder.py  recipe_ranker.py  training_data_builder.py
recipe_recommender/output/: enhanced_recipe_features_from_db.csv  real_ingredients_from_db.csv  real_recipe_ingredients_from_db.csv  recipe_id_mapping_v1_v2.json
recipe_recommender/tuning/: __init__.py  tune_gbm.py  tune_ranker.py
recipe_recommender/utils/: __init__.py  common.py  fetch_user_interactions.py
